--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,7 @@ body{
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   text-align: center;
   border: 4px solid var(--clr-border);
   border-bottom-left-radius: 2.5rem;
@@ -82,7 +82,6 @@ body{
 }
 
 .smallGlassContainer{
-  /* background-color: antiquewhite; */
   height: 14rem;
   padding: 0.5rem 6rem 1rem;
   display: grid;
@@ -112,4 +111,21 @@ body{
 /* quantity */
 .quantity,.unit{
   font-size: 0.9rem;
+}
+
+.water-filling{
+  width: 100%;
+  background-color: var(--clr-water);
+  border: 0px solid var(--clr-border);
+  border-bottom-left-radius: 2.25rem;
+  border-bottom-right-radius: 2.25rem;
+}
+
+.remaining-water-ltr{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
